fixed slider on mobile view

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,30 +1,12 @@
 .header {
   --header-paddingX: 21px;
   background-color: $c-black;
-  padding: 21px 19px 0 var(--header-paddingX);
   border-radius: 0 0 30px 30px;
-  overflow: hidden;
-  // display: flex;
-  // justify-content: center;
-
-  @include above320 {
-    --header-paddingX: 41px;
-    padding: 21px var(--header-paddingX) 0;
-  }
-
-  @include above640 {
-    --header-paddingX: 54px;
-    padding: 49px var(--header-paddingX) 0 var(--header-paddingX);
-  }
+  overflow-x: hidden;
 
   @include above1024 {
-    --header-paddingX: 227px;
-    padding-right: var(--header-paddingX);
-    padding-left: var(--header-paddingX);
-  }
-
-  @include above1600 {
-    // --header-paddingX: 707px;
+    display: flex;
+    justify-content: center;
   }
 
   &__controls {
@@ -56,7 +38,7 @@
   &__nav {
     display: none;
 
-    @include above640 {
+    @include above980 {
       &--visible {
         display: block;
       }
@@ -104,16 +86,21 @@
 
   &__slider {
     position: relative;
+    width: calc(100% + var(--header-paddingX) * 2);
+    border-radius: 30px;
+    overflow: hidden;
     left: calc(var(--header-paddingX) * -1);
 
     @include above640 {
-      left: auto;
-      right: calc(var(--header-paddingX) * -1);
+      width: fit-content;
+      border-radius: 0;
+      overflow: initial;
+      left: initial;
     }
 
-    @include above1600 {
-      right: -407px;
-    }
+    // @include above980 {
+    //   right: -227px;
+    // }
 
     &-button {
       display: flex;
