--- a/src/styles/blocks/intro.scss
+++ b/src/styles/blocks/intro.scss
@@ -1,5 +1,4 @@
 .intro {
-  background-color: $c-gray;
   text-align: center;
   padding: 120px 20px;
 
