--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
 
   &--hide {
-    @include above640 {
+    @include above980 {
       display: none;
     }
   }
