--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,8 +1,9 @@
 .html-page {
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 .page {
-  position: relative;
-  overflow-x: hidden;
+  background-color: $c-skyblue;
+  // position: relative;
+  // overflow-x: hidden;
 }
