--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -13,8 +13,26 @@
   }
 }
 
+@mixin above480 {
+  @media (min-width: 481px) {
+    @content;
+  }
+}
+
 @mixin above640 {
   @media (min-width: 641px) {
+    @content;
+  }
+}
+
+@mixin above880 {
+  @media (min-width: 881px) {
+    @content;
+  }
+}
+
+@mixin above980 {
+  @media (min-width: 981px) {
     @content;
   }
 }
